--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -41,8 +41,8 @@
 
     <ListView
         android:id="@+id/sportList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@id/h10"
         app:layout_constraintBottom_toBottomOf="@id/h95"
         app:layout_constraintLeft_toLeftOf="parent"
