--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -97,6 +97,7 @@
                     android:layout_height="wrap_content"
                     android:text="Q2:過去一年體重是否有不正常減輕(>5%)的情形？"/>
                 <RadioGroup
+                    android:id="@+id/abnormal_weight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -123,6 +124,7 @@
                     android:layout_height="wrap_content"
                     android:text="Q3:每周的運動時數？"/>
                 <RadioGroup
+                    android:id="@+id/exercise_kind"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -153,6 +155,7 @@
                     android:layout_height="wrap_content"
                     android:text="Q4:過去一年是否有跌倒的經驗？"/>
                 <RadioGroup
+                    android:id="@+id/fall_down"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
