--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -95,17 +95,19 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Q2:過去一年體重是否有不正常減輕(>5%)的情形？"/>
+                    android:text="Q2:過去一年體重是否有不正常減輕(> 3 kg)的情形？"/>
                 <RadioGroup
                     android:id="@+id/abnormal_weight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <RadioButton
+                        android:id="@+id/q2_yes"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="是"/>
                     <RadioButton
+                        android:id="@+id/q2_no"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="否"/>
@@ -129,14 +131,17 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <RadioButton
+                        android:id="@+id/q3_1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1~3"/>
+                        android:text="0~3"/>
                     <RadioButton
+                        android:id="@+id/q3_2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="3~6"/>
                     <RadioButton
+                        android:id="@+id/q3_3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="6~9"/>
@@ -160,10 +165,12 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <RadioButton
+                        android:id="@+id/q4_yes"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="是"/>
                     <RadioButton
+                        android:id="@+id/q4_no"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="否"/>
