--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,7 +52,8 @@
 
         <Button
             android:id="@+id/confirmButton"
-            android:text="Confirm"
+            android:text="確認"
+            android:textSize="20sp"
             android:layout_height="wrap_content"
             android:layout_width="180dp" />
 
@@ -61,7 +62,8 @@
             android:layout_width="180dp"
             android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
-            android:text="Back" />
+            android:text="返回"
+            android:textSize="20sp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -78,7 +80,7 @@
             android:layout_height="wrap_content"
             android:text="Create\na new\naccount"
             android:layout_marginRight="50dp"
-            android:textSize="45dp" />
+            android:textSize="45sp" />
 
     </LinearLayout>
 
@@ -108,8 +110,8 @@
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:gravity="center"
-                android:textSize="20dp"
-                android:hint="Username" />
+                android:textSize="25sp"
+                android:hint="帳號" />
 
         </LinearLayout>
 
@@ -131,8 +133,8 @@
                 android:inputType="textPassword"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:textSize="20dp"
-                android:hint="Password" />
+                android:textSize="25sp"
+                android:hint="密碼" />
         </LinearLayout>
 
     </LinearLayout>
