--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -1,34 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/cardview"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="10sp"
+    android:layout_marginRight="10sp"
+    android:layout_marginTop="8sp"
+    android:layout_marginBottom="8sp"
+    app:cardCornerRadius="8dp"
+    app:cardBackgroundColor="@color/purple_200" >
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="10dp">
+        android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/sport"
-            android:layout_width="208dp"
-            android:layout_height="40dp"
-            android:layout_margin="10dp"
-            android:gravity="center"
-            android:text="項目"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/time"
-            android:layout_width="146dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="right"
-            android:text="AAAAAAAAA\nAAAAAAAA"
-            android:textSize="15sp" />
+            android:orientation="horizontal"
+            android:padding="5dp" >
+
+            <ImageView
+                android:layout_width="120px"
+                android:layout_height="120px"
+                android:paddingTop="20px"
+                android:paddingLeft="20px"
+                android:src="@drawable/user"
+                android:layout_gravity="center" />
+
+            <TextView
+                android:id="@+id/sport"
+                android:layout_width="180dp"
+                android:layout_height="40dp"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:text="項目"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:gravity="right"
+                android:text="AAAAAAAAA\nAAAAAAAA"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="20px"
+            android:paddingLeft="50px"
+            android:text="position" />
 
     </LinearLayout>
 
-
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
