Add sport image

--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -22,6 +22,7 @@
             android:padding="5dp" >
 
             <ImageView
+                android:id="@+id/icon"
                 android:layout_width="120px"
                 android:layout_height="120px"
                 android:paddingTop="20px"
