--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -8,6 +8,8 @@
     android:layout_marginTop="8sp"
     android:layout_marginBottom="8sp"
     app:cardCornerRadius="8dp"
+    android:clickable="true"
+    android:contextClickable="true"
     app:cardBackgroundColor="@color/purple_200" >
 
     <LinearLayout
