--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -13,51 +13,86 @@
     app:cardBackgroundColor="@color/purple_200" >
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="120px"
+            android:layout_height="120px"
+            android:layout_marginStart="30px"
+            android:paddingTop="20px"
+            android:paddingLeft="20px"
+            android:src="@drawable/user"
+            android:layout_gravity="center" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="5dp" >
-
-            <ImageView
-                android:id="@+id/icon"
-                android:layout_width="120px"
-                android:layout_height="120px"
-                android:paddingTop="20px"
-                android:paddingLeft="20px"
-                android:src="@drawable/user"
-                android:layout_gravity="center" />
+            android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/sport"
                 android:layout_width="180dp"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:gravity="center"
                 android:textColor="@color/white"
                 android:text="項目"
                 android:textSize="25sp" />
 
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="130dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:gravity="right"
-                android:text="AAAAAAAAA\nAAAAAAAA"
-                android:textSize="15sp" />
-        </LinearLayout>
+                android:gravity="end"
+                android:paddingBottom="20px"
+                android:paddingEnd="5px"
+                android:orientation="horizontal" >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingBottom="20px"
-            android:paddingLeft="50px"
-            android:text="position" />
+                <ImageView
+                    android:layout_width="50px"
+                    android:layout_height="50px"
+                    android:paddingTop="10px"
+                    android:layout_marginStart="100px"
+                    android:layout_marginEnd="10px"
+                    android:layout_gravity="center"
+                    android:src="@drawable/clock" />
+
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:gravity="end"
+                    android:text="AAAAAAAA"
+                    android:textSize="15sp"
+                    android:layout_gravity="center" />
+
+                <ImageView
+                    android:layout_width="50px"
+                    android:layout_height="50px"
+                    android:layout_marginStart="150px"
+                    android:layout_marginEnd="10px"
+                    android:paddingTop="10px"
+                    android:layout_gravity="center"
+                    android:src="@drawable/location" />
+
+                <TextView
+                    android:id="@+id/location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20px"
+                    android:layout_marginBottom="10px"
+                    android:layout_marginTop="10px"
+                    android:paddingEnd="20px"
+                    android:text="position"
+                    android:textColor="@color/white"
+                    android:gravity="center" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
