--- a/app/src/main/res/layout/activity_event_info.xml
+++ b/app/src/main/res/layout/activity_event_info.xml
@@ -112,9 +112,19 @@
         android:layout_height="wrap_content"
         android:text="加入"
         android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="@id/h95"
+        app:layout_constraintTop_toTopOf="@id/h90"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/v15"/>
+
+    <Button
+        android:id="@+id/shareButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="分享"
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="@id/h90"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/v40"/>
 
     <Button
         android:id="@+id/backButton"
@@ -122,9 +132,9 @@
         android:layout_height="wrap_content"
         android:text="返回"
         android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="@id/h95"
+        app:layout_constraintTop_toTopOf="@id/h90"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="@id/v85"/>
+        app:layout_constraintRight_toRightOf="@id/v90"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/h05"
@@ -187,7 +197,7 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.75"/>
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/h95"
+        android:id="@+id/h90"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -197,19 +207,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.15"/>
+        app:layout_constraintGuide_percent="0.10"/>
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/v30"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.35"/>
+        app:layout_constraintGuide_percent="0.30"/>
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/v85"
+        android:id="@+id/v40"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.85"/>
+        app:layout_constraintGuide_percent="0.40"/>
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/v90"
         android:layout_width="wrap_content"
