--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="@id/h10"
-        app:layout_constraintBottom_toBottomOf="@id/h95"
+        app:layout_constraintBottom_toBottomOf="@id/h90"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
@@ -28,10 +28,9 @@
 
     <ImageView
         android:id="@+id/add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:src="@drawable/add"
-        android:scaleType="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/h10"
         app:layout_constraintLeft_toLeftOf="@id/v65"
@@ -39,10 +38,9 @@
 
     <ImageView
         android:id="@+id/reload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:src="@drawable/reload"
-        android:scaleType="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/h10"
         app:layout_constraintLeft_toLeftOf="@id/v80"
@@ -54,7 +52,7 @@
         android:layout_height="wrap_content"
         android:text="退出"
         android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="@id/h95"
+        app:layout_constraintTop_toTopOf="@id/h90"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
@@ -65,12 +63,13 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.10"/>
+
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/h95"
+        android:id="@+id/h90"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.95"/>
+        app:layout_constraintGuide_percent="0.90" />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/v50"
         android:layout_width="wrap_content"
