--- a/app/src/main/res/layout/activity_event_info.xml
+++ b/app/src/main/res/layout/activity_event_info.xml
@@ -122,9 +122,11 @@
         android:layout_height="wrap_content"
         android:text="分享"
         android:textSize="20sp"
+        app:layout_constraintStart_toStartOf=""
         app:layout_constraintTop_toTopOf="@id/h90"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/v40"/>
+        app:layout_constraintLeft_toLeftOf="@id/v15"
+        app:layout_constraintRight_toRightOf="@id/v90" />
 
     <Button
         android:id="@+id/backButton"
@@ -214,12 +216,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.30"/>
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/v40"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.40"/>
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/v90"
         android:layout_width="wrap_content"
